--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.27.0",
+    "node-pty": "^1.1.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
