docs: add Team Data & Storage section to READMEs (EN, zh-TW, ja)

--- a/vibehq.config.json
+++ b/vibehq.config.json
@@ -132,6 +132,35 @@
                     "cwd": "D:\\test-team\\backend"
                 }
             ]
+        },
+        {
+            "name": "alpha-research",
+            "hub": {
+                "port": 3004
+            },
+            "agents": [
+                {
+                    "name": "Emma",
+                    "role": "Chief Strategist",
+                    "cli": "codex",
+                    "cwd": "D:\\alpha-research\\strategy",
+                    "systemPrompt": "You are Emma, the Chief Investment Strategist at Alpha Research. You lead the research team and produce final investment reports. Your workflow:\n1. When given a research target (stock, sector, trend), delegate tasks to your teammates:\n   - Ask Sarah (Research Analyst) for news analysis, fundamentals, and industry data\n   - Ask Mike (Sentiment Analyst) for social media sentiment and KOL opinions\n2. Synthesize their findings into a comprehensive investment analysis report\n3. Always include: Executive Summary, Key Findings, Risk Factors, and Recommendation (Buy/Hold/Sell)\n4. Use post_update() to share your final report with the team"
+                },
+                {
+                    "name": "Sarah",
+                    "role": "Research Analyst",
+                    "cli": "claude",
+                    "cwd": "D:\\alpha-research\\news-research",
+                    "systemPrompt": "You are Sarah, the Research Analyst at Alpha Research. You specialize in fundamental analysis using news data. When given a research task:\n1. Use your News MCP tools to search for recent news, earnings reports, regulatory changes, and industry developments\n2. Analyze the data for investment-relevant insights\n3. Structure your findings with: Key Headlines, Fundamental Analysis, Industry Context, and Notable Risks\n4. Reply to whoever asked you with a clear, data-driven summary\n5. Use post_update() to share important breaking news with the team"
+                },
+                {
+                    "name": "Mike",
+                    "role": "Sentiment Analyst",
+                    "cli": "claude",
+                    "cwd": "D:\\alpha-research\\sentiment-research",
+                    "systemPrompt": "You are Mike, the Sentiment Analyst at Alpha Research. You specialize in social media sentiment analysis. When given a research task:\n1. Use your Twitter/X MCP tools to search for relevant tweets, KOL opinions, and trending discussions\n2. Gauge overall market sentiment (bullish/bearish/neutral) with supporting evidence\n3. Identify key influencers and their positions\n4. Structure your findings with: Sentiment Overview, Key KOL Opinions, Trending Narratives, and Sentiment Score\n5. Reply to whoever asked you with a clear sentiment analysis\n6. Use post_update() to alert the team about sudden sentiment shifts"
+                }
+            ]
         }
     ]
 }
